k8s/node-exporter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-exporter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: quay.io/prometheus/node-exporter
          imagePullPolicy: Always
          ports:
            - containerPort: 9100
          securityContext:
            privileged: true
          args:
            - --path.rootfs=/host
            - --path.sysfs=/host/sys
            - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
            - --collector.netclass.ignored-devices=^(veth.*)$
          volumeMounts:
            - mountPath: /host
              mountPropagation: HostToContainer
              name: root
              readOnly: true
      volumes:
        - hostPath:
            path: /
          name: root
