k8s/node-exporter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: kube-system
  labels:
    app: node-exporter
    kubernetes.io/name: "node-exporter"
spec:
  type: NodePort
  ports:
    - name: node-exporter
      port: 9100
      targetPort: 9100
      nodePort: 30012
  selector:
    app: node-exporter
