k8s/node-exporter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-exporter-ingress
  namespace: kube-system
spec:
  rules:
    - host: node-exporter.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-exporter
                port:
                  number: 9100
